--- a/XeppIT.ZoneElectrical/Shared/NavMenu.razor
+++ b/XeppIT.ZoneElectrical/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Administration
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="projectlist">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Projects
+            </NavLink>
+        </li>
     </ul>
 </div>
 
