--- a/XeppIT.ZoneElectrical/Shared/NavMenu.razor
+++ b/XeppIT.ZoneElectrical/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="addresses">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Addresses
+            </NavLink>
+        </li>
     </ul>
 </div>
 
