--- a/XeppIT.ZoneElectrical/Shared/NavMenu.razor
+++ b/XeppIT.ZoneElectrical/Shared/NavMenu.razor
@@ -37,6 +37,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Addresses
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Companies">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Addresses
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Contacts">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Addresses
+            </NavLink>
+        </li>
     </ul>
 </div>
 
