--- a/XeppIT.ZoneElectrical/Rolodex/Shared/CompanyEditDialog.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/CompanyEditDialog.razor
@@ -1,5 +1,41 @@
-﻿<h3>CompanyEditDialog</h3>
+﻿@using XeppIT.ZoneElectrical.Rolodex.Models
+@inject RolodexService RolodexService
+@inject DialogService DialogService
+
+<div class="container-fluid">
+    <div class="row mb-3">
+        <div class="col-12 mb-1">
+            <label for="Name" class="form-check-label">Name</label>
+            <input id="Name" class="form-control mb-3" type="text" aria-label="Name" @bind-value="@Name">
+        </div>
+    </div>
+    <div class="row justify-content-end">
+        <button type="button" class="btn btn-primary" @onclick="Save">Save</button>
+        <button type="button" class="btn btn-secondary ml-1" @onclick="Cancel">Cancel</button>
+    </div>
+</div>
 
 @code {
+    [Parameter] public Company Context { get; set; }
 
+    public string Name { get; set; }
+
+    protected override void OnParametersSet()
+    {
+        Name = Context.Name;
+    }
+
+    async Task Save()
+    {
+        Context.Name = Name;
+
+        await RolodexService.UpdateCompanyAsync(Context);
+
+        DialogService.Close();
+    }
+
+    void Cancel()
+    {
+        DialogService.Close();
+    }
 }
