--- a/XeppIT.ZoneElectrical/Rolodex/Shared/ContactEditDialog.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/ContactEditDialog.razor
@@ -1,5 +1,102 @@
-﻿<h3>ContactEditDialog</h3>
+﻿@using XeppIT.ZoneElectrical.Rolodex.Models
+@inject RolodexService RolodexService
+@inject DialogService DialogService
+@inject NotificationService NotificationService
+
+<div class="container-fluid">
+    <div class="row mb-3">
+        <div class="col-12 mb-1">
+            <label for="Name" class="form-check-label">Name</label>
+            <input id="Name" class="form-control mb-3" type="text" aria-label="Name" @bind-value="@FirstName">
+        </div>
+        <div class="col-12 mb-1">
+            <label for="Street" class="form-check-label">Street</label>
+            <input id="Street" class="form-control mb-3" type="text" aria-label="Street" @bind-value="@LastName">
+        </div>
+        <div class="col-12 mb-1">
+            <label for="Town" class="form-check-label">Town</label>
+            <input id="Town" class="form-control mb-3" type="text" aria-label="Town" @bind-value="@Email">
+        </div>
+        <div class="col-12 mb-1">
+            <label for="Postcode" class="form-check-label">Postcode</label>
+            <input id="Postcode" class="form-control mb-3" type="text" aria-label="Postcode" @bind-value="@PhoneNumber">
+        </div>
+        <div class="col-12 mb-1">
+            <label for="Postcode" class="form-check-label">Postcode</label>
+            <RadzenAutoComplete Data="@CompanyList" TextProperty="Name"
+                                Style="margin-bottom: 20px" Change="@(args => Change(args, "CompanySelection"))" />
+        </div>
+    </div>
+    <div class="row justify-content-end">
+        <button type="button" class="btn btn-primary" @onclick="() => Save()">Save</button>
+        <button type="button" class="btn btn-secondary ml-1" @onclick="() => Cancel()">Cancel</button>
+    </div>
+</div>
 
 @code {
+    [Parameter] public Contact Context { get; set; }
 
+    List<Company> CompanyList = new List<Company>();
+
+    public string FirstName { get; set; }
+    public string LastName { get; set; }
+    public string Email { get; set; }
+    public string PhoneNumber { get; set; }
+    public string Company { get; set; }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        FirstName = Context.FirstName;
+        LastName = Context.LastName;
+        Email = Context.Email;
+        PhoneNumber = Context.PhoneNumber;
+        Company = Context.Company;
+
+        await GetCompanyList();
+
+        //return base.OnParametersSetAsync();
+    }
+
+    private async Task GetCompanyList()
+    {
+        var tempList = await RolodexService.FindAllCompaniesAsync();
+
+        foreach (var company in tempList)
+        {
+            CompanyList.Add(company);
+        }
+    }
+
+    async Task Change(object value, string name)
+    {
+        if (await RolodexService.CompanyNameExistsAsync(value.ToString()))
+        {
+            Company = value.ToString();
+        }
+        else
+        {
+            var notificationMessages = new NotificationMessage()
+            { Severity = NotificationSeverity.Error, Summary = "Company does not exist", Detail = $"The Company does not exist please add the new company" };
+
+            NotificationService.Notify(notificationMessages);
+        }
+    }
+
+    async Task Save()
+    {
+        Context.FirstName = FirstName;
+        Context.LastName = LastName;
+        Context.Email = Email;
+        Context.PhoneNumber = PhoneNumber;
+        Context.Company = Company;
+
+        await RolodexService.UpdateContactAsync(Context);
+
+        DialogService.Close();
+    }
+
+    void Cancel()
+    {
+        DialogService.Close();
+    }
 }
