--- a/XeppIT.ZoneElectrical/Rolodex/Pages/Addresses.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Pages/Addresses.razor
@@ -1,82 +1,82 @@
 ﻿@page "/addresses"
-@using XeppIT.ZoneElectrical.Project.Models
-@using XeppIT.ZoneElectrical.Project.Shared
 @using XeppIT.ZoneElectrical.Rolodex.Models
-@using XeppIT.ZoneElectrical.Project
-@using XeppIT.ZoneElectrical.Rolodex.Shared
 
 @inject RolodexService RolodexService
 
-<AuthorizeView Roles="EMPLOYEE">
-    <Authorized>
-        <Test2 modalRef="@modalRef"/>
-        <div class="container-fluid">
-            <div class="row">
-                <h3>Address List</h3>
-            </div>
-            <div class="row">
-                <button type="button" class="btn btn-primary mb-3" @onclick="OpenNewAddressDialog">New Address</button>
-            </div>
-            <div class="row">
-                <div class="table-responsive">
-                    <table class="table table-striped table-dark">
-                        <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Street</th>
-                                <th scope="col">Town</th>
-                                <th scope="col">Postcode</th>
-                                <th scope="col">Edit</th>
-                                <th scope="col">Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var address in AddressList)
-                            {
-                                <tr>
-                                    <td>@address.Name</td>
-                                    <td>@address.Street</td>
-                                    <td>@address.Town</td>
-                                    <td>@address.Postcode</td>
-                                    <td><button type="button" class="btn btn-primary" @onclick="() => OpenEditContactDialog(address)"><span class="oi oi-pencil"></span></button></td>
-                                    <td><button type="button" class="btn btn-danger" @onclick="() => DeleteProject(address)"><span class="oi oi-ban"></span></button></td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </Authorized>
-    <NotAuthorized>
-        <p>You're not logged in as admin.</p>
-    </NotAuthorized>
-</AuthorizeView>
+@if (AddressList == null)
+{
+    <div class="spinner"></div>
+}
+else
+{
+    <AuthorizeView Roles="EMPLOYEE">
+        <Authorized>
+            <Row>
+                <Column>
+                    <Card Margin="Margin.Is4.OnY">
+                        <CardHeader>
+                            <CardTitle>Address List</CardTitle>
+                        </CardHeader>
+                        <CardBody>
+                            <Field>
+                                <FieldLabel>Search</FieldLabel>
+                                <TextEdit Placeholder="Enter name" Text="@_nameSearchString" TextChanged="@OnNameChanged">
+                                    <FieldHelp>Please name to search for.</FieldHelp>
+                                </TextEdit>
+                            </Field>
+                        </CardBody>
+                        <CardBody>
+                            <Table Narrow="true">
+                                <TableHeader>
+                                    <TableRow>
+                                        <TableHeaderCell>Name</TableHeaderCell>
+                                        <TableHeaderCell>Street</TableHeaderCell>
+                                        <TableHeaderCell>Town</TableHeaderCell>
+                                        <TableHeaderCell>Postcode</TableHeaderCell>
+                                        <TableHeaderCell>Edit</TableHeaderCell>
+                                        <TableHeaderCell>Delete</TableHeaderCell>
+                                    </TableRow>
+                                </TableHeader>
+                                <TableBody>
+                                    @foreach (var address in AddressList)
+                                    {
+                                        <TableRow>
+                                            <TableRowCell>@address.Name</TableRowCell>
+                                            <TableRowCell>@address.Street</TableRowCell>
+                                            <TableRowCell>@address.Town</TableRowCell>
+                                            <TableRowCell>@address.Postcode</TableRowCell>
+                                            <TableRowCell><button type="button" class="btn btn-primary" @onclick="() => OpenEditDialog(address)"><span class="oi oi-pencil"></span></button></TableRowCell>
+                                            <TableRowCell><button type="button" class="btn btn-danger" @onclick="() => Delete(address)"><span class="oi oi-ban"></span></button></TableRowCell>
+                                        </TableRow>
+                                    }
+                                </TableBody>
+                            </Table>
+                        </CardBody>
+                    </Card>
+                </Column>
+            </Row>
+        </Authorized>
+        <NotAuthorized>
+            <p>You're not logged in as admin.</p>
+        </NotAuthorized>
+    </AuthorizeView>
+}
+
 
 @code {
     [CascadingParameter]
     private Task<AuthenticationState> AuthenticationStateTask { get; set; }
 
-    private Modal modalRef;
+    List<Address> AddressList { get; set; }
 
-    private void ShowModal()
-    {
-        modalRef.Show();
-    }
-
-    System.Security.Claims.ClaimsPrincipal _currentUser;
-
-    List<Address> AddressList { get; set; } = new List<Address>();
+    private string _nameSearchString;
 
     protected override async Task OnInitializedAsync()
     {
-        // Get the current logged in user
-        _currentUser = (await AuthenticationStateTask).User;
-
-        await GetAddressList();
+        AddressList = await RolodexService.FindAllAddressesAsync();
     }
 
-    public async Task GetAddressList()
+    public async Task RefreshList()
     {
         var addressList = await RolodexService.FindAllAddressesAsync();
 
@@ -86,31 +86,48 @@
         {
             AddressList.Add(address);
         }
-    }
-
-    async Task OpenNewAddressDialog()
-    {
-
-
-        await GetAddressList();
 
         StateHasChanged();
     }
 
-    async Task OpenEditContactDialog(Address address)
+    async Task OnNameChanged(string value)
     {
+        _nameSearchString = value;
 
+        var addressList = await RolodexService.FindAllAddressesByNameAsync(value);
+        AddressList.Clear();
 
-        await GetAddressList();
+        foreach (var address in addressList)
+        {
+            AddressList.Add(address);
+        }
 
         StateHasChanged();
     }
 
-    async Task DeleteProject(Address address)
+
+
+    async Task OpenNewDialog()
+    {
+
+        await RefreshList();
+
+        StateHasChanged();
+    }
+
+    async Task OpenEditDialog(Address address)
+    {
+
+        await RefreshList();
+
+        StateHasChanged();
+    }
+
+    async Task Delete(Address address)
     {
         await RolodexService.DeleteAddressAsync(address);
 
-        await GetAddressList();
+        await RefreshList();
 
         StateHasChanged();
     }
