got button working

--- a/XeppIT.ZoneElectrical/Rolodex/Shared/AddressNewDialog.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/AddressNewDialog.razor
@@ -1,4 +1,6 @@
-﻿@using XeppIT.ZoneElectrical.Rolodex.Models
+﻿@page "/newaddress"
+
+@using XeppIT.ZoneElectrical.Rolodex.Models
 @inject RolodexService RolodexService
 
 
