--- a/XeppIT.ZoneElectrical/Rolodex/Pages/Addresses.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Pages/Addresses.razor
@@ -1,5 +1,6 @@
 ﻿@page "/addresses"
 @using XeppIT.ZoneElectrical.Rolodex.Models
+@inject NavigationManager NavigationManager
 
 @inject RolodexService RolodexService
 
@@ -40,14 +41,14 @@ else
                                 <TableBody>
                                     @foreach (var address in AddressList)
                                     {
-                                        <TableRow>
-                                            <TableRowCell>@address.Name</TableRowCell>
-                                            <TableRowCell>@address.Street</TableRowCell>
-                                            <TableRowCell>@address.Town</TableRowCell>
-                                            <TableRowCell>@address.Postcode</TableRowCell>
-                                            <TableRowCell><button type="button" class="btn btn-primary" @onclick="() => OpenEditDialog(address)"><span class="oi oi-pencil"></span></button></TableRowCell>
-                                            <TableRowCell><button type="button" class="btn btn-danger" @onclick="() => Delete(address)"><span class="oi oi-ban"></span></button></TableRowCell>
-                                        </TableRow>
+                                    <TableRow>
+                                        <TableRowCell>@address.Name</TableRowCell>
+                                        <TableRowCell>@address.Street</TableRowCell>
+                                        <TableRowCell>@address.Town</TableRowCell>
+                                        <TableRowCell>@address.Postcode</TableRowCell>
+                                        <TableRowCell><Button @onclick="() => OpenEditDialog(address)"><span class="oi oi-pencil" /></Button></TableRowCell>
+                                        <TableRowCell><Button @onclick="() => Delete(address)"><span class="oi oi-ban" /></Button></TableRowCell>
+                                    </TableRow>
                                     }
                                 </TableBody>
                             </Table>
