--- a/XeppIT.ZoneElectrical/Rolodex/Companies/Pages/Companies.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Companies/Pages/Companies.razor
@@ -1,8 +1,8 @@
 ﻿@page "/companies"
 @using XeppIT.ZoneElectrical.Project.Models
 @using XeppIT.ZoneElectrical.Project.Shared
-@using XeppIT.ZoneElectrical.Rolodex.Models
 @using XeppIT.ZoneElectrical.Project
+@using XeppIT.ZoneElectrical.Rolodex.Companies.Model
 @using XeppIT.ZoneElectrical.Rolodex.Shared
 
 @inject RolodexService RolodexService
