--- a/XeppIT.ZoneElectrical/Rolodex/Contacts/Pages/Contacts.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Contacts/Pages/Contacts.razor
@@ -1,8 +1,8 @@
 ﻿@page "/contacts"
 @using XeppIT.ZoneElectrical.Project.Models
 @using XeppIT.ZoneElectrical.Project.Shared
-@using XeppIT.ZoneElectrical.Rolodex.Models
 @using XeppIT.ZoneElectrical.Project
+@using XeppIT.ZoneElectrical.Rolodex.Contacts.Model
 @using XeppIT.ZoneElectrical.Rolodex.Shared
 
 @inject RolodexService RolodexService
