--- a/XeppIT.ZoneElectrical/Rolodex/Shared/AddressEditDialog.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/AddressEditDialog.razor
@@ -1,7 +1,7 @@
 ﻿@using XeppIT.ZoneElectrical.Identity.Services
 @using Microsoft.AspNetCore.Identity
 @using System.Threading
-@using XeppIT.ZoneElectrical.Rolodex.Models
+@using XeppIT.ZoneElectrical.Rolodex.Addresses.Model
 @inject RolodexService RolodexService
 
 
