--- a/XeppIT.ZoneElectrical/Rolodex/Shared/AddressNewDialog.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/AddressNewDialog.razor
@@ -1,6 +1,5 @@
 ﻿@page "/newaddress"
-
-@using XeppIT.ZoneElectrical.Rolodex.Models
+@using XeppIT.ZoneElectrical.Rolodex.Addresses.Model
 @inject RolodexService RolodexService
 
 
