--- a/XeppIT.ZoneElectrical/Rolodex/Shared/CompanyEditDialog.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/CompanyEditDialog.razor
@@ -1,4 +1,4 @@
-﻿@using XeppIT.ZoneElectrical.Rolodex.Models
+﻿@using XeppIT.ZoneElectrical.Rolodex.Companies.Model
 @inject RolodexService RolodexService
 
 
