--- a/XeppIT.ZoneElectrical/Rolodex/Shared/TestDialog1.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/TestDialog1.razor
@@ -2,7 +2,7 @@
 
 @using XeppIT.ZoneElectrical.Rolodex.Shared
 @using XeppIT.ZoneElectrical.Unclassified
-@using XeppIT.ZoneElectrical.Rolodex.Models
+@using XeppIT.ZoneElectrical.Rolodex.Addresses.Model
 @inject NavigationArgs NavigationArgs
 <Row>
     <Column>
