--- a/XeppIT.ZoneElectrical/Project/Shared/ProjectNewDialog.razor
+++ b/XeppIT.ZoneElectrical/Project/Shared/ProjectNewDialog.razor
@@ -1,7 +1,7 @@
 ﻿@using XeppIT.ZoneElectrical.Identity.Services
 @using XeppIT.ZoneElectrical.Project.Models
 @using XeppIT.ZoneElectrical.Rolodex
-@using XeppIT.ZoneElectrical.Rolodex.Models
+@using XeppIT.ZoneElectrical.Rolodex.Addresses.Model
 @inject ProjectManager ProjectManager
 @inject RolodexService RolodexService
 
