--- a/XeppIT.ZoneElectrical/Rolodex/Shared/ContactEditDialog.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Shared/ContactEditDialog.razor
@@ -1,4 +1,5 @@
-﻿@using XeppIT.ZoneElectrical.Rolodex.Models
+﻿@using XeppIT.ZoneElectrical.Rolodex.Contacts.Model
+@using XeppIT.ZoneElectrical.Rolodex.Companies.Model
 @inject RolodexService RolodexService
 
 
