Rolodex-Address complete

--- a/XeppIT.ZoneElectrical/Rolodex/Addresses/Pages/EditAddressPage.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Addresses/Pages/EditAddressPage.razor
@@ -5,73 +5,84 @@
 @inject NavigationArgs NavigationArgs
 @inject RolodexService RolodexService
 
-    <Row>
-        <Column>
-            <Card Margin="Margin.Is4.OnY">
-                <CardHeader>
-                    <CardTitle> Create New Address</CardTitle>
-                </CardHeader>
-                <CardBody>
-                    <Field>
-                        <FieldLabel>Name</FieldLabel>
-                        <Validation Validator="@ValidateName">
-                            <TextEdit Placeholder="Enter name" @bind-Text="@_tempAddress.Name">
-                                <Feedback>
-                                    <ValidationNone>Please enter the name.</ValidationNone>
-                                    <ValidationSuccess>Name is good.</ValidationSuccess>
-                                    <ValidationError>Enter valid name!</ValidationError>
-                                </Feedback>
-                            </TextEdit>
-                        </Validation>
-                    </Field>
-                    <Field>
-                        <FieldLabel>Street</FieldLabel>
-                        <Validation Validator="@ValidateStreet">
-                            <TextEdit Placeholder="Enter street" @bind-Text="@_tempAddress.Street">
-                                <Feedback>
-                                    <ValidationNone>Please enter the street.</ValidationNone>
-                                    <ValidationSuccess>Street is good.</ValidationSuccess>
-                                    <ValidationError>Enter valid street!</ValidationError>
-                                </Feedback>
-                            </TextEdit>
-                        </Validation>
-                    </Field>
-                    <Field>
-                        <FieldLabel>Town</FieldLabel>
-                        <Validation Validator="@ValidateTown">
-                            <TextEdit Placeholder="Enter town" @bind-Text="@_tempAddress.Town">
-                                <Feedback>
-                                    <ValidationNone>Please enter the town.</ValidationNone>
-                                    <ValidationSuccess>Town is good.</ValidationSuccess>
-                                    <ValidationError>Enter valid town!</ValidationError>
-                                </Feedback>
-                            </TextEdit>
-                        </Validation>
-                    </Field>
-                    <Field>
-                        <FieldLabel>Postcode</FieldLabel>
-                        <Validation Validator="@ValidatePostcode">
-                            <TextEdit Placeholder="Enter postcode" @bind-Text="@_tempAddress.Postcode">
-                                <Feedback>
-                                    <ValidationNone>Please enter the postcode.</ValidationNone>
-                                    <ValidationSuccess>Postcode is good.</ValidationSuccess>
-                                    <ValidationError>Enter valid postcode!</ValidationError>
-                                </Feedback>
-                            </TextEdit>
-                        </Validation>
-                    </Field>
-                </CardBody>
-                <CardFooter>
-                    <Button @onclick="Save">Save</Button>
-                    <Button @onclick="Cancel">Cancel</Button>
-                </CardFooter>
-            </Card>
-        </Column>
-    </Row>
+<Alert @ref="_alertRef" Color="Color.Danger">
+    <AlertMessage>
+        Edit Failed -
+    </AlertMessage>
+    <AlertDescription>
+        Failed to edit the address.
+    </AlertDescription>
+    <CloseButton/>
+</Alert>
+
+<Row>
+    <Column>
+        <Card Margin="Margin.Is4.OnY">
+            <CardHeader>
+                <CardTitle> Create New Address</CardTitle>
+            </CardHeader>
+            <CardBody>
+                <Field>
+                    <FieldLabel>Name</FieldLabel>
+                    <Validation Validator="@ValidateName">
+                        <TextEdit Placeholder="Enter name" @bind-Text="@_tempAddress.Name">
+                            <Feedback>
+                                <ValidationNone>Please enter the name.</ValidationNone>
+                                <ValidationSuccess>Name is good.</ValidationSuccess>
+                                <ValidationError>Enter valid name!</ValidationError>
+                            </Feedback>
+                        </TextEdit>
+                    </Validation>
+                </Field>
+                <Field>
+                    <FieldLabel>Street</FieldLabel>
+                    <Validation Validator="@ValidateStreet">
+                        <TextEdit Placeholder="Enter street" @bind-Text="@_tempAddress.Street">
+                            <Feedback>
+                                <ValidationNone>Please enter the street.</ValidationNone>
+                                <ValidationSuccess>Street is good.</ValidationSuccess>
+                                <ValidationError>Enter valid street!</ValidationError>
+                            </Feedback>
+                        </TextEdit>
+                    </Validation>
+                </Field>
+                <Field>
+                    <FieldLabel>Town</FieldLabel>
+                    <Validation Validator="@ValidateTown">
+                        <TextEdit Placeholder="Enter town" @bind-Text="@_tempAddress.Town">
+                            <Feedback>
+                                <ValidationNone>Please enter the town.</ValidationNone>
+                                <ValidationSuccess>Town is good.</ValidationSuccess>
+                                <ValidationError>Enter valid town!</ValidationError>
+                            </Feedback>
+                        </TextEdit>
+                    </Validation>
+                </Field>
+                <Field>
+                    <FieldLabel>Postcode</FieldLabel>
+                    <Validation Validator="@ValidatePostcode">
+                        <TextEdit Placeholder="Enter postcode" @bind-Text="@_tempAddress.Postcode">
+                            <Feedback>
+                                <ValidationNone>Please enter the postcode.</ValidationNone>
+                                <ValidationSuccess>Postcode is good.</ValidationSuccess>
+                                <ValidationError>Enter valid postcode!</ValidationError>
+                            </Feedback>
+                        </TextEdit>
+                    </Validation>
+                </Field>
+            </CardBody>
+            <CardFooter>
+                <Button @onclick="Save">Save</Button>
+                <Button @onclick="Cancel">Cancel</Button>
+            </CardFooter>
+        </Card>
+    </Column>
+</Row>
 
 
 @code{
-    Address _tempAddress = new Address();
+    Alert _alertRef = new Alert();
+    readonly Address _tempAddress = new Address();
 
     protected override void OnInitialized()
     {
@@ -89,8 +100,19 @@
 
     private async Task Save()
     {
-        await RolodexService.UpdateAddressAsync(_tempAddress);
-        NavigationArgs.NavigateTo(NavigationArgs.ReturnUrl);
+        var result = await RolodexService.UpdateAddressAsync(_tempAddress);
+
+        if (result.IsAcknowledged)
+        {
+            if (result.ModifiedCount == 0)
+            {
+                _alertRef.Show();
+            }
+        }
+        else
+        {
+            NavigationArgs.NavigateTo(NavigationArgs.ReturnUrl);
+        }
     }
 
     private void Cancel()
