--- a/XeppIT.ZoneElectrical/Rolodex/Addresses/Pages/AddressesPage.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Addresses/Pages/AddressesPage.razor
@@ -21,10 +21,10 @@ else
                         </CardHeader>
                         <CardBody>
                             <Fields>
-                                <Field ColumnSize="ColumnSize.Is1">
-                                    <Button Color="Color.Primary" @onclick="GoToNewAddressPage">New</Button>
+                                <Field>
+                                    <Button Color="Color.Primary" @onclick="GoToNewAddressPage">Create New</Button>
                                 </Field>
-                                <Field ColumnSize="ColumnSize.Is3">
+                                <Field>
                                     <TextEdit Placeholder="Search..." Text="@_nameSearchString" TextChanged="@OnSearchChanged" />
                                 </Field>
                             </Fields>
@@ -49,8 +49,16 @@ else
                                             <TableRowCell>@address.Street</TableRowCell>
                                             <TableRowCell>@address.Town</TableRowCell>
                                             <TableRowCell>@address.Postcode</TableRowCell>
-                                            <TableRowCell><Button @onclick="() => GoToEditAddressPage(address)"><span class="oi oi-pencil" /></Button></TableRowCell>
-                                            <TableRowCell><Button @onclick="() => Delete(address)"><span class="oi oi-ban" /></Button></TableRowCell>
+                                            <TableRowCell>
+                                                <Button @onclick="() => GoToEditAddressPage(address)">
+                                                    <Icon Name="IconName.Edit" />
+                                                </Button>
+                                            </TableRowCell>
+                                            <TableRowCell>
+                                                <Button @onclick="() => Delete(address)">
+                                                    <Icon Name="IconName.Delete" />
+                                                </Button>
+                                            </TableRowCell>
                                         </TableRow>
                                     }
                                 </TableBody>
