--- a/XeppIT.ZoneElectrical/Rolodex/Companies/Pages/NewCompanyPage.razor
+++ b/XeppIT.ZoneElectrical/Rolodex/Companies/Pages/NewCompanyPage.razor
@@ -1,8 +1,8 @@
 ﻿@page "/newcompany"
-@using XeppIT.ZoneElectrical.Unclassified
 @using XeppIT.ZoneElectrical.Rolodex.Companies.Model
 
-@inject NavigationArgs NavigationArgs
+@inject IJSRuntime JsRuntime
+@inject NavigationManager NavigationManager
 @inject RolodexService RolodexService
 
 <Alert @ref="_alertRef" Color="Color.Danger">
@@ -58,13 +58,13 @@
         }
         else
         {
-            NavigationArgs.NavigateTo(NavigationArgs.ReturnUrl);
+            await JsRuntime.InvokeVoidAsync("goBack");
         }
     }
 
-    private void Cancel()
+    private async Task Cancel()
     {
-        NavigationArgs.NavigateTo(NavigationArgs.ReturnUrl);
+        await JsRuntime.InvokeVoidAsync("goBack");
     }
 
     private void ValidateName(ValidatorEventArgs e)
