--- a/XeppIT.ZoneElectrical/Shared/NavMenu.razor
+++ b/XeppIT.ZoneElectrical/Shared/NavMenu.razor
@@ -28,7 +28,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="projectlist">
+            <NavLink class="nav-link" href="projects">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
@@ -39,12 +39,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Companies">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Addresses
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Companies
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Contacts">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Addresses
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Contacts
             </NavLink>
         </li>
     </ul>
